Updated minecraft bot

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mineflayer": "^2.34.0",
-    "mineflayer-pathfinder": "file:/home/nicj/go/src/github.com/PrismarineJS/mineflayer-pathfinder",
+    "mineflayer": "^2.37.0",
+    "mineflayer-pathfinder": "https://github.com/nicholasjackson/mineflayer-pathfinder.git",
     "mineflayer-pvp": "^1.0.2",
     "mineflayer-statemachine": "^1.5.1",
     "node-flag": "^1.5.1",
