--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "mineflayer": "^2.37.0",
-    "mineflayer-pathfinder": "git+https://github.com/nicholasjackson/mineflayer-pathfinder.git",
+    "mineflayer-pathfinder": "git+https://github.com/nicholasjackson/mineflayer-pathfinder.git#f-add-navigable-doors",
     "mineflayer-pvp": "^1.0.2",
     "mineflayer-statemachine": "^1.5.1",
     "node-flag": "^1.5.1",
